# ssb-rwrapr

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_README.md  README.md  RENV.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties  ssb-pypitemplate-notes.md
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  release.yml  replace_packagename.py  tests.yml
docs/: conf.py  index.md  reference.md
examples/: dataset_z1.csv  pandas_example.py  presentation_wrapr.py
hack4ssb/: presentation_wrapr.py
src/rwrapr/: __init__.py  convert_py2r.py  convert_r2py.py  function_wrapper.py  lazy_rexpr.py  library.py  load_namespace.py  nputils.py  rarray.py  rattributes.py  rdataframe.py  renv.py  rfactor.py  rlist.py  rutils.py  rview.py  settings.py  sparse.py  toggle_rview.py  utils.py
src/ssb_wrapr/: RArray.py  RAttributes.py  RDataFrame.py  RFactor.py  RList.py  RView.py  __init__.py  __main__.py  convert_py2r.py  convert_r2py.py  function_wrapper.py  library.py  load_namespace.py  nputils.py  rarray.py  renv.py  rfactor.py  rlist.py  rutils.py  settings.py  sparse.py  utils.py
src/wrapr/: RArray.py  RAttributes.py  RDataFrame.py  RFactor.py  RList.py  RObject.py  Robject.py  __init__.py  (+17 more)
tests/: RView.py  Robject.py  __init__.py  modsem.py  rscript.R  rview.py  test_FixRiskyIntervals.py  test_GaussSuppressionFromData.py  test_GaussSuppression_DominanceRule.py  test_GaussSupressDec.py  test_SubsettingRArray.py  test_custom_funcs.py  test_dplyr.py  test_factors.py  test_fixriskyintervals.py  test_functions.py  test_gausssuppression_dominancerule.py  test_gausssuppressionfromdata.py  test_gausssupressdec.py  test_main.py  test_modsem.py  test_rscript.py  test_rview.py  test_subsetting_rarray.py  test_toPy.py  test_topy.py  test_wrappers.py
