[tool.poetry]
name = "wrapr"
version = "0.1.0"
description = "Python package for using R in Python"
authors = ["ssb-pph <pph@ssb.no>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.2.0"
rpy2 = "^3.5.16"
termcolor = "^2.4.0"
numpy = "<2.0"
scipy = ">=1.3"
dapla-toolbelt = ">=1.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.15.3"
pytest = ">=5.2"
pytest-cov = ">=2.8"
black = {extras = ["jupyter"], version = ">=24.4.2"}
isort = ">=5.12.0"
pre-commit = ">=3.3.1"
pre-commit-hooks = ">=4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
force_single_line = true
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector"
cell_metadata_filter = "-papermill,tags"

[tool.pytest.ini_options]
pythonpath = ["src"]

